// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter disabled 1`] = `
<div>
  <div class="sk-reset-filters is-disabled">
    <div class="sk-reset-filters__reset">reset filters</div>
  </div>
</div>
`;

exports[`filter enabled 1`] = `
<div>
  <div class="sk-reset-filters">
    <div class="sk-reset-filters__reset">reset filters</div>
  </div>
</div>
`;
